5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1800_2567.log
== TEST (2019-06-06 11:07:31) 
-- CODE:
from numpy import*

x = int(input("tamanho"))

d = zeros(x, dtype=int)
a = 0
for z in range(size(d)):
	d[z] = *
print(d)
-- ERROR:
File "XXXX", line 8
    d[z] = *
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:07:49) 
-- CODE:
from numpy import*

x = int(input("tamanho"))

d = zeros(x, dtype=int)
a = 0
for z in range(size(d)):
	d[z] = '*'
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:08:13) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))

d = zeros(x, dtype=str)
a = 0
for z in range(size(d)):
	d[z] = '*'
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:08:23) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))

d = zeros(x, dtype=str)
a = 0
for z in range(size(d)):
	d[z] = *
print(d)
-- ERROR:
File "XXXX", line 8
    d[z] = *
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:08:37) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))

d = zeros(x, dtype=str)
a = 0
for z in range(size(d)):
	d[z] = "*"
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:09:34) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))

d = len(x)
a = 0
for z in range(len(d)):
	d[z] = "*"
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:11:03) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))

d = zeros(x, dtype=str)
a = 0
for z in range(size(d)):
	d[z] = '*'*x
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:11:19) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))


a = 0
for z in range(size(d)):
	d = '*'*x
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:11:49) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))

d = "*"
a = 0
for z in range(size(d)):
	d = d*x
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:12:44) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"
a = 0
for z in range(size(f)):
	d = d*x
	x = x - 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:12:58) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"
a = 0
for z in range(size(f)):
	d = d*x
	x = x - 1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:14:03) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"
a = 0
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:14:25) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"
a = 0
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x + 1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:14:43) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"
a = 0
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x + 1
	print(d)
-- EXECUTION TIME:
1.19253
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:14:44) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"
a = 0
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x + 1
	print(d)
-- EXECUTION TIME:
2.379
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:14:56) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"
a = 0
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x + 1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:16:50) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"
a = 0
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
	for z in range(size(f)):
		d = "*"
		d = "*"*x
		x = x + 1
		print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:17:32) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"
a = "*"
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
	for z in range(size(f)):
		a = "*"
		a = "*"*x
		x = x + 1
		print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:18:17) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"
a = "*"
z = 0
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
	for z in range(size(f)):
		a = "*"
		a = "*"*z
		z = z + 1
		print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:18:31) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"
a = 0
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x + 1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:20:04) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"
a = "*"
for z in range(size(f)):
	for z in range(size(f)):
		d = "*"
		d = "*"*x
		x = x - 1
	for z in range(size(f)):
		a = "*"
		a = "*"*x
		x = x + 1
	print(d)
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:20:41) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x + 1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:20:59) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x + 1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:21:02) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x + 1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:21:30) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x + 1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:22:05) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"
for z in x:
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x + 1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:22:17) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"
for z in x:
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
for z in x:
	d = "*"
	d = "*"*x
	x = x + 1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:22:50) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"

for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
for z in range(size(f)+1):
	d = "*"
	d = "*"*x
	x = x + 1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:22:54) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"

for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
for z in range(size(f)+1):
	d = "*"
	d = "*"*x
	x = x + 1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:22:58) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"

for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
for z in range(size(f)+1):
	d = "*"
	d = "*"*x
	x = x + 1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:23:05) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"

for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
for z in range(size(f)+1):
	d = "*"
	d = "*"*x
	x = x + 1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:24:08) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"

for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
for z in range(size(f)+1):
	d = "*"
	d = "*"*x
	x = x + 1
	print(d)
-- EXECUTION TIME:
0.815863
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:42:16) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"

for z in range(size(f)):
	d = "*"*x
	x = x - 1
	print(d)
for z in range(size(f)+1):
	d = "*"
	d = "*"*x
	x = x + 1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:42:57) 
-- CODE:
from numpy import*

x = int(input("tamanho: "))
f = zeros(x, dtype=int)
d = "*"

for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x - 1
	print(d)
for z in range(size(f)):
	d = "*"
	d = "*"*x
	x = x + 1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
